Revert "fix: remove custom visibility"
This reverts commit 139e60c7aa985b010d813e3a689bd593d38e748c.

--- a/packages/manager/apps/container/src/components/virtualAgentStyles.module.scss
+++ b/packages/manager/apps/container/src/components/virtualAgentStyles.module.scss
@@ -5,6 +5,10 @@ $toggle-button-size: 54px;
   height: fit-content !important;
 }
 
+.hidden {
+  visibility: hidden !important;
+}
+
 .virtualAgent {
   z-index: 950;
   width: 320px;
@@ -17,6 +21,7 @@ $toggle-button-size: 54px;
     box-shadow: 0px 4px 5px 2px rgba(171, 171, 171, 0.45);
     position: relative;
     pointer-events: all;
+    visibility: visible;
 
     &_content {
       border-radius: inherit;
